tests/purs/failing/OperatorSections2.purs
-- @shouldFailWith IncorrectAnonymousArgument
module Main where

import Prelude

test = ( _ * 4 + 1 ) 50
