tests/purs/failing/OperatorSections2.out
Error found:
at tests/purs/failing/OperatorSections2.purs:6:10 - 6:11 (line 6, column 10 - line 6, column 11)

  An anonymous function argument appears in an invalid context.


See https://github.com/purescript/documentation/blob/master/errors/IncorrectAnonymousArgument.md for more information,
or to contribute content related to this error.

